updated with 2D examples

--- a/distribution/PSVM-1/index.html
+++ b/distribution/PSVM-1/index.html
@@ -42,7 +42,7 @@
 			<h2>PSVM</h2>
 			<p>
 			A library by <a href="http://makematics.com">Greg Borenstein</a> for the <a href="http://www.processing.org" target="_blank">Processing</a> programming environment.<br>
-			Last update, 09/12/2012.
+			Last update, 09/24/2012.
 			</p>
 			<p>
 			A machine learning library based on the LibSVM Support Vector Machines Library.<br>
@@ -78,7 +78,7 @@
 			<h2>Examples</h2>
 			<p>Find a list of examples in the current distribution of PSVM, or have a look at them by following the links below.</p>
 			<ul>
-			<li><a href="examples/TextSpamExample/TextSpamExample.pde">TextSpamExample</a></li> 
+			<li><a href="examples/MultiClassSVM2D/MultiClassSVM2D.pde">MultiClassSVM2D</a></li> <li><a href="examples/TextSpamExample/TextSpamExample.pde">TextSpamExample</a></li> 
 			</ul>
 			</div>
 			
